tests/errors/E015.zen
int main() {
    return foo(42);     // E015: Call to undefined function 'foo'
}